src/runtime-rs/vendor/actix-macros/tests/trybuild/test-03-only-async.rs
#[actix_rt::test]
fn my_test() {
    futures_util::future::ready(()).await
}

fn main() {}
